# workgraph-collections

./: README.md  pyproject.toml
.github/config/: code-python.yaml
.github/workflows/: ci.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst
docs/source/ase/: index.rst  surface.ipynb
docs/source/common/: eos.ipynb  index.rst  module.rst
docs/source/cp2k/: eos.ipynb  index.rst  module.rst  xps.ipynb
docs/source/gpaw/: base.ipynb  index.rst  module.rst  wannier90.ipynb
docs/source/qe/: bader.ipynb  bands.ipynb  eos.ipynb  index.rst  module.rst  pdos.ipynb  wannier.ipynb  wannier90.ipynb  xps.ipynb
examples/ase/emt/: atomization_energy.py
examples/ase/qe/: atomization_energy.ipynb  atomization_energy.py  eos.ipynb
examples/cp2k/: eos_si.py  etfa.ipynb  xps_etfa.py
examples/gpaw/: wannier.ipynb
examples/qe/: eos_si.py  example.ipynb  test_bands_group.py  test_bands_group_relax.py  test_bands_pdos.py  test_bands_pdos_merge.py  test_pdos_group_scf.py  test_relax.py  test_wannier.py  wannier.ipynb  wannier_minimal.py  xps_bader.ipynb  xps_etfa.py
tests/: conftest.py  debug_tests.py  test_ase.py  test_ase_emt.py  test_ase_espresso.py
tests/ase/: test_ase_emt.py  test_ase_espresso.py  test_common_core_level.py  test_common_surface.py  test_espresso_ld1.py  test_espresso_xps.py
tests/espresso_pseudo/: Al.pbe-nl-rrkjus_psl.1.0.0.UPF  N.pbe-n-rrkjus_psl.1.0.0.UPF  Si.pbe-nl-rrkjus_psl.1.0.0.UPF
tests/espresso_pseudo/kjpaw/: O.pbe-n-kjpaw_psl.1.0.0.UPF
workgraph_collections/: bader.py
workgraph_collections/common/: eos.py  xps.py
workgraph_collections/cp2k/: __init__.py  eos.py  xps.py
workgraph_collections/gpaw/: base.py  wannier90.py
workgraph_collections/qe/: __init__.py  bader.py  bands.py  eos.py  pdos.py  relax.py  utils.py  wannier90.py  wannier90_bands.py  wannier90_minimal.py  wannier90_minimal_base.py  wannier_minimal.py  wannier_minimal_base.py  xps.py
(+130 files in other folders)
